# gemini-chat-api-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
examples/: basic_async.rs  chat.rs
src/: client.rs  enums.rs  error.rs  lib.rs  utils.rs
