[package]
name = "gemini-chat-api"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for Google's internal Gemini Chat API"
license = "MIT"
repository = "https://github.com/11philip22/gemini-chat-api-rs"
keywords = ["gemini", "google", "generative-ai", "llm", "chatbot"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
rand = "0.8"
url = "2"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "chat"
path = "examples/chat.rs"
